tests/paczka1/fuzzy1/59816029.err
Error in line 1: lGHPION8TJ A889 24,0
Error in line 3: 9HvD8uF A79 30,1
Error in line 9: A79 A79 68,7
Error in line 5: 9HvD8uF A262 54,5
Error in line 22: 8427bT3 A79 18,44
Error in line 14: 8427bT3 A79 26,3
Error in line 25: 9HvD8uF A262 21,0
Error in line 33: 8427bT3 A241 86,1
